added basic part

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,13 +8,11 @@
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "cds",
       "args": [
-        "serve",
+        "watch",
         "--with-mocks",
         "--in-memory?"
       ],
       "skipFiles": [
         "<node_internals>/**"
       ]
-    }
-  ]
-}
+    }]}
